# a-server-rs

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  fly.toml  schema.sql
.github/workflows/: build.yml
src/: main.rs
src/app/: errors.rs  mod.rs
src/app/email/: auth.rs  mod.rs  project.rs
src/app/entities/: notification.rs
src/app/entities/project/: appropriate_status.rs  architectural_service.rs  budget_range.rs  commercial_work.rs  mod.rs  square_range.rs  status.rs
src/app/entities/user/: mod.rs  user_email.rs  user_token.rs  user_type.rs
src/app/services/: auth.rs  mod.rs  notification.rs  project.rs  user.rs
src/app/traits/: mod.rs  send_email.rs
src/app/traits/repositories/: mod.rs  notification.rs  project.rs  user.rs
src/app/utils/: jwt.rs  mod.rs  validate_params.rs
src/core/: email.rs  mod.rs  notifier.rs
src/core/entities/user/: mod.rs  user_type.rs
src/core/services/: auth.rs
src/core/traits/: mod.rs
src/core/traits/repositories/: user.rs
src/core/utils/: hash_pwd.rs  jwt.rs  mod.rs
src/db/: db.sql  from_row.rs  mod.rs  notification.rs  project.rs  user.rs
src/handlers/: auth.rs  conversation.rs  json_validate_rejection.rs  mod.rs  notification.rs  project.rs  user.rs  ws.rs
src/handlers/extra/: extract.rs  mod.rs
