[package]
name = "a-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
axum = "0.6.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tokio-postgres = { version = "0.7.2", features = [
  "with-uuid-0_8",
  "with-serde_json-1",
  "with-chrono-0_4",
] }
dotenv = "0.15.0"
jsonwebtoken = "8.2.0"
chrono = { version = "0.4.23", features = ["serde"] }
async-trait = "0.1.73"
mailgun-rs = "0.1.10"

[profile.release]
opt-level = 3
